sonrcube fixes